# zongshuji

./: .env.example  .gitignore  README.md  models.toml  pyproject.toml  rh  rh.cmd  runs.db  京城山海经·新编-实施计划.md  京城山海经·新编-策划案.md
assets/00_风格参考/: prompt-log.md
assets/01_智枢/: prompt-log.md
assets/01_烛龙/: prompt-log.md
assets/02_应龙/: prompt-log.md
assets/02_鲲鹏/: prompt-log.md
assets/03_帝江/: prompt-log.md
assets/03_知微/: prompt-log.md
assets/04_叠影/: prompt-log.md
assets/04_肥遗/: prompt-log.md
assets/05_追日/: prompt-log.md
assets/05_驺吾/: prompt-log.md
assets/06_乘黄/: prompt-log.md  prompt-regen.txt
assets/06_药灵/: prompt-log.md
assets/07_总览图/: prompt-log.md
assets/09_视频素材/: prompt-log.md
jingshan/: __init__.py  cli.py  client.py  config.py  db.py  models.py  promptlog.py
